# mcp-math-tool

./: Cargo.toml  Dockerfile  README.md  openapi.yaml
src/: main.rs  mcp_server.rs
