[package]
name = "mcp-math-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
meval = "0.2.0" # 一个快速且支持变量的数学表达式求值库
anyhow = "1.0"

# HTTP 框架依赖 (用于 Dify 集成)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
